@@ -166,8 +166,6 @@ class auditd (
   validate_bool($enable_auditing)
   #validate_bool($enable_logging)
 
-  compliance_map()
-
   # This is done here so that the kernel option can be properly removed if
   # auditing is to be disabled on the system.
   if $enable_auditing {
@@ -207,4 +205,5 @@ class auditd (
       Class['::auditd::service']
     }
   }
+
 }
