@@ -32,5 +32,5 @@ HOSTS:
 
 CONFIG:
   log_level: verbose
-  type:      foss
+  type:      aio
   vagrant_memsize: 256
